--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ body {
     background-color: var(--normal-hover-color)
 }
 
-.history-icon-wrapper:hover > div {
+.history-icon-wrapper:hover>div {
     display: inline-block;
     right: 30px
 }
@@ -186,7 +186,8 @@ body {
     color: var(--dark-hover-color);
     font-size: 14px;
     font-weight: 400;
-    padding: 0 12px;;
+    padding: 0 12px;
+    ;
     text-overflow: ellipsis;
     width: 100%;
 }
@@ -654,18 +655,43 @@ body {
     .history-icon-wrapper {
         display: none
     }
+
+    /* #keypad {
+        display: flex !important
+    }
+
+    #memory {
+        display: none !important
+    }
+
+    #history {
+        display: none !important
+    } */
 }
+
+/* @media screen and (max-width: 601px) {
+    #keypad {
+        display: flex !important
+    }
+
+    #memory {
+        display: none !important
+    }
+
+    #history {
+        display: none !important
+    }
+} */
 
 
 @media screen and (min-width: 712px) {
 
     .memory-btn {
-        width: 90px;
+        width: 90px
     }
-
 }
 
-@media screen and (min-height: 650px) and (min-width: 1022px){
+@media screen and (min-height: 650px) and (min-width: 1022px) {
     .left-col {
         display: block
     }
